--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -9,6 +9,7 @@
   "author": "Hassan Ramadan",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
