--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.2.3",
     "node": "^17.4.0"
   }
