--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "node": "^17.4.0"
   }
