--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -36,6 +36,7 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.24.0",
+    "jest": "^27.5.1"
   }
 }
