--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "apollo-server": "^3.10.2",
     "graphql": "^16.6.0",
-    "uuid": "^9.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
