--- a/part9/ts-setup/package.json
+++ b/part9/ts-setup/package.json
@@ -2,15 +2,23 @@
   "name": "ts-setup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "ts-node": "ts-node",
     "bmiCalculator": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts"
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "author": "Hassan Ramadan",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
